Fixed blog issue on firefox.

--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -788,6 +788,7 @@ figure a:hover img {
       max-width: 100%; } }
 
 .cards .col, .cards .grid-block {
+  width: 100%;
   background: #fff;
   margin-bottom: 42px; }
   .cards .col > a, .cards .grid-block > a {
